# procedural-rogue

./: Cargo.toml  LICENSE  README.md
assets/: base.attrs.yaml
assets/items/: mac_n_cheese.item.yaml
lib/bevy_freecam/: Cargo.toml
lib/bevy_freecam/src/: lib.rs
src/: lib.rs
src/creature/: mod.rs  player.rs
src/item/: attributes.rs  id.rs  items.rs  mod.rs  weapons.rs
src/tools/: dev_console.rs  mod.rs
